[metadata]
name = contrail
version = 0.0.1
summary = Tempest Contrail plugin
author = Rick Bartra
author-email = rb560u@att.com
home-page = https://github.com/rb560u/plugin-test
keywords =
    Contrail
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    plugin_name = contrail_tempest_plugin.plugin:ContrailPlugin

[pbr]
warnerrors = true
